use default resource for import (for now)